Have added integration tests for the orders-model module